# picorv-sandbox

./: .gitignore  README.md  requirements.txt
fw/: CMakeLists.txt  Makefile  rv32-fpga.ld
fw/cmake/: toolchain.cmake  utils.cmake
fw/src/: crt0.s  main.c  sim_main.c  testapp_blinky.c
picosb/: bus.py  cli.py  cpu.py  mem.py  top.py
picosb/periph/: gpio.py  mem.py
picosb/soc/: bus.py  peripheral.py
quartus/de0-nano/: picosb_de0_nano_top.qpf  picosb_de0_nano_top.qsf  picosb_de0_nano_top.sdc  picosb_de0_nano_top.v  picosb_de0_nano_top_assignment_defaults.qdf
rtl/: am_top.v  memory.v  top.v
sim/: Makefile  Makefile.sim  testbench.py  vhparser.py
